recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:3: error: identifier expected but ')' found.
  gauche(90.)
            ^FourSquare:4: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:5: error: identifier expected but ')' found.
  gauche(90.)
            ^FourSquare:6: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:8: error: identifier expected but ')' found.
  avance(100.)
             ^